# algorithm

./: .gitignore  README-zh.md  README.md  configure.ac
src/: Makefile.am  avl_tree.c  avl_tree.h  b_tree.c  b_tree.h  binary_search_tree.c  binary_search_tree.h  main.c  utility.c  utility.h
tests/: Makefile.am  check_avl_tree.c  check_binary_search_tree.c
